--- a/index.html
+++ b/index.html
@@ -17,21 +17,30 @@
   <body>
     <h1>Estimate your cost</h1>
     <div class="container">
-        <div class="tabs">
-            <p>Free</p>
-            <p class="active">Team</p>
-            <p>Professional</p>
-            <p>Enterprise</p>
+      <div class="tabs">
+        <p>Free</p>
+        <p class="active">Team</p>
+        <p>Professional</p>
+        <p>Enterprise</p>
+      </div>
+      <div class="line"></div>
+      <div class="toggle-wrapper">
+        <img src="images/icon1.png" alt="" />
+        <div class="toggle">
+          <span>Mobile</span>
+          <span>Web</span>
         </div>
-        <div class="line"></div>
-        <div class="toggle-wrapper">
-            <img src="images/icon1.png" alt="">
-            <div class="toggle">
-                <span>Mobile</span>
-                <span>Web</span>
-            </div>
-            <img src="images/icon2.png" alt="">
-        </div>
+        <img src="images/icon2.png" alt="" />
+      </div>
+      <div class="sessions-card">
+        <p>monthly sessions</p>
+        <p class="number">20,000</p>
+      </div>
+      <p class="description">
+        A session is a continuous period of user activity on your web app or
+        website. Choose exactly how many sessions you wish to record and discard
+        the extras.
+      </p>
     </div>
   </body>
 </html>
